--- a/CA1 Project.ipynb
+++ b/CA1 Project.ipynb
@@ -558,6 +558,124 @@
         "plt.tight_layout()\n",
         "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FNd4yJKZfxNk"
+      },
+      "source": [
+        "# Performing Task (f)\n",
+        "**(f): Apply dummy encoding to categorical variables (at least one variable used from the data set) and\n",
+        " discuss the benefits of dummy encoding to understand the categorical data.**<br><br>\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6VODqM3ChAvl"
+      },
+      "source": [
+        "Dummy encoding is a technique used to convert categorical variables into a numerical format suitable for machine learning algorithms. It involves creating binary (0 or 1) columns for each category present in the categorical variable. This transformation allows algorithms to interpret and process categorical data effectively.\n",
+        " <br><br>\n",
+        "\n",
+        "**Benefits of Dummy Encoding:**<br><br>\n",
+        "\n",
+        "**1. Compatibility with Algorithms:** Many machine learning algorithms require numerical input. Dummy encoding converts categorical data into a format that algorithms can interpret, allowing their application to a broader range of models.<br><br>\n",
+        "\n",
+        "**2. Preserves Information:** Dummy encoding represents categorical variables without assigning any ordinal or hierarchical structure. Each category becomes an independent binary feature, preserving the individuality of categories.\n",
+        "<br><br>\n",
+        "**3. No Assumptions on Relationship:** Unlike label encoding, which assigns ordinal values to categories, dummy encoding does not imply any order or relationship between categories, avoiding potential misinterpretation by algorithms.\n",
+        "<br><br>\n",
+        "**4. Prevents Magnitude Impact:** Dummy encoding ensures that no false ordinal relationships or magnitudes are assigned to categories, thereby preventing the model from making incorrect assumptions based on category labels.\n",
+        "<br><br>\n",
+        "**5. Improved Model Performance:** By converting categorical data into a numerical format that algorithms can understand, dummy encoding enhances the predictive power of machine learning models."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iQPOzxaOhCcP",
+        "outputId": "d209031e-ba46-4727-b1da-1e8879ed9e7f"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "      location       date  total_cases  new_cases_smoothed  total_deaths  \\\n",
+            "0  Afghanistan 2020-01-03      72075.0              23.286        1342.0   \n",
+            "1  Afghanistan 2020-01-04      72075.0              23.286        1342.0   \n",
+            "2  Afghanistan 2020-01-05      72075.0              23.286        1342.0   \n",
+            "3  Afghanistan 2020-01-06      72075.0              23.286        1342.0   \n",
+            "4  Afghanistan 2020-01-07      72075.0              23.286        1342.0   \n",
+            "\n",
+            "   new_deaths_smoothed  total_vaccinations  people_fully_vaccinated  \\\n",
+            "0                0.143          12030010.5                5716019.0   \n",
+            "1                0.143          12030010.5                5716019.0   \n",
+            "2                0.143          12030010.5                5716019.0   \n",
+            "3                0.143          12030010.5                5716019.0   \n",
+            "4                0.143          12030010.5                5716019.0   \n",
+            "\n",
+            "   new_people_vaccinated_smoothed median_age  gdp_per_capita  \\\n",
+            "0                           950.0   10 to 20        1803.987   \n",
+            "1                           950.0   10 to 20        1803.987   \n",
+            "2                           950.0   10 to 20        1803.987   \n",
+            "3                           950.0   10 to 20        1803.987   \n",
+            "4                           950.0   10 to 20        1803.987   \n",
+            "\n",
+            "   diabetes_prevalence  female_smokers  male_smokers  population  \\\n",
+            "0                 9.59             6.3          33.1  41128772.0   \n",
+            "1                 9.59             6.3          33.1  41128772.0   \n",
+            "2                 9.59             6.3          33.1  41128772.0   \n",
+            "3                 9.59             6.3          33.1  41128772.0   \n",
+            "4                 9.59             6.3          33.1  41128772.0   \n",
+            "\n",
+            "   continent_Africa  continent_Asia  continent_Europe  \\\n",
+            "0                 0               1                 0   \n",
+            "1                 0               1                 0   \n",
+            "2                 0               1                 0   \n",
+            "3                 0               1                 0   \n",
+            "4                 0               1                 0   \n",
+            "\n",
+            "   continent_North America  continent_Oceania  continent_South America  \\\n",
+            "0                        0                  0                        0   \n",
+            "1                        0                  0                        0   \n",
+            "2                        0                  0                        0   \n",
+            "3                        0                  0                        0   \n",
+            "4                        0                  0                        0   \n",
+            "\n",
+            "   continent_Unknown  \n",
+            "0                  0  \n",
+            "1                  0  \n",
+            "2                  0  \n",
+            "3                  0  \n",
+            "4                  0  \n"
+          ]
+        }
+      ],
+      "source": [
+        "# Let's apply dummy encoding to a categorical variable from the our dataset.\n",
+        "# We have a categorical variable 'continent' in the dataset 'data'.\n",
+        "# We are applying dummy encoding using Pandas:\n",
+        "\n",
+        "# Apply dummy encoding using Pandas\n",
+        "dummy_encoded_data = pd.get_dummies(data['continent'], prefix='continent')\n",
+        "\n",
+        "# Concatenate the dummy encoded columns with the original data\n",
+        "data_with_dummies = pd.concat([data, dummy_encoded_data], axis=1)\n",
+        "\n",
+        "# Drop the original 'continent' column as it's no longer needed\n",
+        "data_with_dummies.drop('continent', axis=1, inplace=True)\n",
+        "\n",
+        "# Display the resulting dataset with dummy encoding\n",
+        "print(data_with_dummies.head())\n"
+      ]
     }
   ],
   "metadata": {
