3. Performing One-Hot Encoding

--- a/CA1 Project.ipynb
+++ b/CA1 Project.ipynb
@@ -676,6 +676,110 @@
         "# Display the resulting dataset with dummy encoding\n",
         "print(data_with_dummies.head())\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "n7cPdCVFMQPw"
+      },
+      "source": [
+        "#  Performing One-Hot Encoding"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wULSWOe9NF00"
+      },
+      "source": [
+        " - We've used One-Hot Encoding on the 'continent' column in our dataset. This technique transforms categorical data, like the names of continents ('Asia', 'Europe', 'Africa'), into a format that machine learning algorithms can work with more effectively.<br><br>\n",
+        "\n",
+        " - We have different continents like 'Asia', 'Europe', 'Africa', and so on, One-Hot Encoding converts these categories into binary values:\n",
+        "\n",
+        "  - Asia: represented by [1, 0, 0, ...]\n",
+        "  - Europe: represented by [0, 1, 0, ...]\n",
+        "  - Africa: represented by [0, 0, 1, ...]\n",
+        "  - And so on..."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cH8A3TqqNi5b",
+        "outputId": "c63a1970-4d5d-402c-bb1e-f5e7b89cb078"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "  continent     location       date  total_cases  new_cases_smoothed  \\\n",
+            "0      Asia  Afghanistan 2020-01-03      72075.0              23.286   \n",
+            "1      Asia  Afghanistan 2020-01-04      72075.0              23.286   \n",
+            "2      Asia  Afghanistan 2020-01-05      72075.0              23.286   \n",
+            "3      Asia  Afghanistan 2020-01-06      72075.0              23.286   \n",
+            "4      Asia  Afghanistan 2020-01-07      72075.0              23.286   \n",
+            "\n",
+            "   total_deaths  new_deaths_smoothed  total_vaccinations  \\\n",
+            "0        1342.0                0.143          12030010.5   \n",
+            "1        1342.0                0.143          12030010.5   \n",
+            "2        1342.0                0.143          12030010.5   \n",
+            "3        1342.0                0.143          12030010.5   \n",
+            "4        1342.0                0.143          12030010.5   \n",
+            "\n",
+            "   people_fully_vaccinated  new_people_vaccinated_smoothed median_age  \\\n",
+            "0                5716019.0                           950.0   10 to 20   \n",
+            "1                5716019.0                           950.0   10 to 20   \n",
+            "2                5716019.0                           950.0   10 to 20   \n",
+            "3                5716019.0                           950.0   10 to 20   \n",
+            "4                5716019.0                           950.0   10 to 20   \n",
+            "\n",
+            "   gdp_per_capita  diabetes_prevalence  female_smokers  male_smokers  \\\n",
+            "0        1803.987                 9.59             6.3          33.1   \n",
+            "1        1803.987                 9.59             6.3          33.1   \n",
+            "2        1803.987                 9.59             6.3          33.1   \n",
+            "3        1803.987                 9.59             6.3          33.1   \n",
+            "4        1803.987                 9.59             6.3          33.1   \n",
+            "\n",
+            "   population  continent_Africa  continent_Asia  continent_Europe  \\\n",
+            "0  41128772.0                 0               1                 0   \n",
+            "1  41128772.0                 0               1                 0   \n",
+            "2  41128772.0                 0               1                 0   \n",
+            "3  41128772.0                 0               1                 0   \n",
+            "4  41128772.0                 0               1                 0   \n",
+            "\n",
+            "   continent_North America  continent_Oceania  continent_South America  \\\n",
+            "0                        0                  0                        0   \n",
+            "1                        0                  0                        0   \n",
+            "2                        0                  0                        0   \n",
+            "3                        0                  0                        0   \n",
+            "4                        0                  0                        0   \n",
+            "\n",
+            "   continent_Unknown  \n",
+            "0                  0  \n",
+            "1                  0  \n",
+            "2                  0  \n",
+            "3                  0  \n",
+            "4                  0  \n"
+          ]
+        }
+      ],
+      "source": [
+        "# Using Pandas get_dummies to perform One-Hot Encoding\n",
+        "one_hot_encoded = pd.get_dummies(data['continent'], prefix='continent')\n",
+        "\n",
+        "# Concatenating the one-hot encoded columns to the original DataFrame\n",
+        "data_encoded = pd.concat([data, one_hot_encoded], axis=1)\n",
+        "\n",
+        "# Dropping the original 'continent' column if needed\n",
+        "# data_encoded.drop('continent', axis=1, inplace=True)\n",
+        "\n",
+        "print(data_encoded.head())  # Displaying the encoded DataFrame\n"
+      ]
     }
   ],
   "metadata": {
