--- a/CA1 Project.ipynb
+++ b/CA1 Project.ipynb
@@ -780,6 +780,420 @@
         "\n",
         "print(data_encoded.head())  # Displaying the encoded DataFrame\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "T82TxYklnAy2"
+      },
+      "source": [
+        "# Performing Task (g)\n",
+        "**(g): Apply PCA with your chosen number of components. Write up a short profile of the first few components extracted based on your understanding.**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WbdistGWKJux",
+        "outputId": "26b901f9-d466-4bb3-afdc-5393c43bd165"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Loadings of each original feature for each component:\n",
+            "   total_cases  new_cases_smoothed  total_deaths  new_deaths_smoothed  \\\n",
+            "0     0.392065            0.263691      0.419896             0.262135   \n",
+            "1    -0.104701            0.038563     -0.050924             0.150556   \n",
+            "2    -0.270327            0.257153     -0.102571             0.579768   \n",
+            "\n",
+            "   total_vaccinations  people_fully_vaccinated  \\\n",
+            "0            0.405915                 0.402387   \n",
+            "1           -0.081355                -0.083720   \n",
+            "2           -0.275600                -0.288461   \n",
+            "\n",
+            "   new_people_vaccinated_smoothed  gdp_per_capita  diabetes_prevalence  \\\n",
+            "0                        0.231065       -0.013835            -0.011865   \n",
+            "1                        0.153691       -0.517949            -0.336396   \n",
+            "2                        0.516499        0.140733             0.089771   \n",
+            "\n",
+            "   female_smokers  male_smokers  population  \n",
+            "0       -0.020128      0.001525    0.388473  \n",
+            "1       -0.641479     -0.359632    0.052709  \n",
+            "2        0.182585      0.118145    0.114226  \n"
+          ]
+        }
+      ],
+      "source": [
+        "# the loadings of each original feature for each component\n",
+        "\n",
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Select features for PCA, assuming numerical columns for simplicity\n",
+        "numerical_data = data.select_dtypes(include=['number'])\n",
+        "\n",
+        "# Standardize the numerical features\n",
+        "scaler = StandardScaler()\n",
+        "scaled_data = scaler.fit_transform(numerical_data)\n",
+        "\n",
+        "# Apply PCA with your chosen number of components (e.g., 3 components)\n",
+        "n_components = 3\n",
+        "pca = PCA(n_components=n_components)\n",
+        "components = pca.fit_transform(scaled_data)\n",
+        "\n",
+        "# Get the loadings or weights of each original feature for each component\n",
+        "loadings = pd.DataFrame(pca.components_, columns=numerical_data.columns)\n",
+        "\n",
+        "# Display the loadings\n",
+        "print(\"Loadings of each original feature for each component:\")\n",
+        "print(loadings)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L97EHFnzna3f",
+        "outputId": "4419d62f-df8d-48c8-8ffd-ca83b6ad4ac7"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "\n",
+              "  <div id=\"df-ad91f51b-c1eb-4352-b4db-c18b452236da\" class=\"colab-df-container\">\n",
+              "    <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Component_1</th>\n",
+              "      <th>Component_2</th>\n",
+              "      <th>Component_3</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>-0.358246</td>\n",
+              "      <td>0.551529</td>\n",
+              "      <td>-0.201124</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-0.358246</td>\n",
+              "      <td>0.551529</td>\n",
+              "      <td>-0.201124</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>-0.358246</td>\n",
+              "      <td>0.551529</td>\n",
+              "      <td>-0.201124</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>-0.358246</td>\n",
+              "      <td>0.551529</td>\n",
+              "      <td>-0.201124</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>-0.358246</td>\n",
+              "      <td>0.551529</td>\n",
+              "      <td>-0.201124</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "    <div class=\"colab-df-buttons\">\n",
+              "\n",
+              "  <div class=\"colab-df-container\">\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ad91f51b-c1eb-4352-b4db-c18b452236da')\"\n",
+              "            title=\"Convert this dataframe to an interactive table.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "\n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-buttons div {\n",
+              "      margin-bottom: 4px;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "    <script>\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#df-ad91f51b-c1eb-4352-b4db-c18b452236da button.colab-df-convert');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      async function convertToInteractive(key) {\n",
+              "        const element = document.querySelector('#df-ad91f51b-c1eb-4352-b4db-c18b452236da');\n",
+              "        const dataTable =\n",
+              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                    [key], {});\n",
+              "        if (!dataTable) return;\n",
+              "\n",
+              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "          + ' to learn more about interactive tables.';\n",
+              "        element.innerHTML = '';\n",
+              "        dataTable['output_type'] = 'display_data';\n",
+              "        await google.colab.output.renderOutput(dataTable, element);\n",
+              "        const docLink = document.createElement('div');\n",
+              "        docLink.innerHTML = docLinkHtml;\n",
+              "        element.appendChild(docLink);\n",
+              "      }\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "\n",
+              "<div id=\"df-4b0a40b0-9d2b-4352-9c50-c7a2f679be31\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4b0a40b0-9d2b-4352-9c50-c7a2f679be31')\"\n",
+              "            title=\"Suggest charts\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "     width=\"24px\">\n",
+              "    <g>\n",
+              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
+              "    </g>\n",
+              "</svg>\n",
+              "  </button>\n",
+              "\n",
+              "<style>\n",
+              "  .colab-df-quickchart {\n",
+              "      --bg-color: #E8F0FE;\n",
+              "      --fill-color: #1967D2;\n",
+              "      --hover-bg-color: #E2EBFA;\n",
+              "      --hover-fill-color: #174EA6;\n",
+              "      --disabled-fill-color: #AAA;\n",
+              "      --disabled-bg-color: #DDD;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart {\n",
+              "      --bg-color: #3B4455;\n",
+              "      --fill-color: #D2E3FC;\n",
+              "      --hover-bg-color: #434B5C;\n",
+              "      --hover-fill-color: #FFFFFF;\n",
+              "      --disabled-bg-color: #3B4455;\n",
+              "      --disabled-fill-color: #666;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart {\n",
+              "    background-color: var(--bg-color);\n",
+              "    border: none;\n",
+              "    border-radius: 50%;\n",
+              "    cursor: pointer;\n",
+              "    display: none;\n",
+              "    fill: var(--fill-color);\n",
+              "    height: 32px;\n",
+              "    padding: 0;\n",
+              "    width: 32px;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart:hover {\n",
+              "    background-color: var(--hover-bg-color);\n",
+              "    box-shadow: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "    fill: var(--button-hover-fill-color);\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart-complete:disabled,\n",
+              "  .colab-df-quickchart-complete:disabled:hover {\n",
+              "    background-color: var(--disabled-bg-color);\n",
+              "    fill: var(--disabled-fill-color);\n",
+              "    box-shadow: none;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-spinner {\n",
+              "    border: 2px solid var(--fill-color);\n",
+              "    border-color: transparent;\n",
+              "    border-bottom-color: var(--fill-color);\n",
+              "    animation:\n",
+              "      spin 1s steps(1) infinite;\n",
+              "  }\n",
+              "\n",
+              "  @keyframes spin {\n",
+              "    0% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "      border-left-color: var(--fill-color);\n",
+              "    }\n",
+              "    20% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    30% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    40% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    60% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    80% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "    90% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "  }\n",
+              "</style>\n",
+              "\n",
+              "  <script>\n",
+              "    async function quickchart(key) {\n",
+              "      const quickchartButtonEl =\n",
+              "        document.querySelector('#' + key + ' button');\n",
+              "      quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
+              "      quickchartButtonEl.classList.add('colab-df-spinner');\n",
+              "      try {\n",
+              "        const charts = await google.colab.kernel.invokeFunction(\n",
+              "            'suggestCharts', [key], {});\n",
+              "      } catch (error) {\n",
+              "        console.error('Error during call to suggestCharts:', error);\n",
+              "      }\n",
+              "      quickchartButtonEl.classList.remove('colab-df-spinner');\n",
+              "      quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
+              "    }\n",
+              "    (() => {\n",
+              "      let quickchartButtonEl =\n",
+              "        document.querySelector('#df-4b0a40b0-9d2b-4352-9c50-c7a2f679be31 button');\n",
+              "      quickchartButtonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "    })();\n",
+              "  </script>\n",
+              "</div>\n",
+              "    </div>\n",
+              "  </div>\n"
+            ],
+            "text/plain": [
+              "   Component_1  Component_2  Component_3\n",
+              "0    -0.358246     0.551529    -0.201124\n",
+              "1    -0.358246     0.551529    -0.201124\n",
+              "2    -0.358246     0.551529    -0.201124\n",
+              "3    -0.358246     0.551529    -0.201124\n",
+              "4    -0.358246     0.551529    -0.201124"
+            ]
+          },
+          "execution_count": 194,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "# Select features for PCA, assuming numerical columns for simplicity\n",
+        "numerical_data = data.select_dtypes(include=['number'])\n",
+        "\n",
+        "# Standardize the numerical features\n",
+        "scaler = StandardScaler()\n",
+        "scaled_data = scaler.fit_transform(numerical_data)\n",
+        "\n",
+        "# Apply PCA with your chosen number of components (e.g., 3 components)\n",
+        "n_components = 3\n",
+        "pca = PCA(n_components=n_components)\n",
+        "components = pca.fit_transform(scaled_data)\n",
+        "\n",
+        "# Profile the first few components\n",
+        "first_components = pd.DataFrame(components, columns=[f\"Component_{i+1}\" for i in range(n_components)])\n",
+        "first_components.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pnDHTP23bUq1"
+      },
+      "source": [
+        "**<h3>Here is the short profile of the first few components extracted based on my understanding:</h3>**<br>\n",
+        "\n",
+        "**Component 1:**<br>\n",
+        " - **Strong Positive Loadings:** total_cases (0.39), total_deaths (0.42), total_vaccinations (0.41), people_fully_vaccinated (0.40)\n",
+        " - **Interpretation:** This component appears to represent the overall scale of the pandemic, with higher values associated with increased COVID-19 cases, deaths, and vaccinations.<br>\n",
+        "\n",
+        "**Component 2:**<br>\n",
+        " - **Strong Negative Loadings:** gdp_per_capita (-0.52), diabetes_prevalence (-0.34), female_smokers (-0.64), male_smokers (-0.36)\n",
+        " - **Interpretation:** Component 2 seems to relate to economic factors and health conditions. Countries with lower GDP per capita, higher diabetes prevalence, and higher rates of female and male smokers will have higher negative scores on this component.<br>\n",
+        "\n",
+        "\n",
+        "**Component 3:**<br>\n",
+        " - **Positive Loadings:** new_deaths_smoothed (0.58), new_people_vaccinated_smoothed (0.52)\n",
+        " - **Interpretation:** This component appears to capture recent changes in deaths and new vaccinations. Countries experiencing higher numbers of new deaths and new people vaccinated are likely to have higher scores on this component."
+      ]
     }
   ],
   "metadata": {
